--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configurações do Samba
 SAMBA_HOST=10.5.24.27
-SAMBA_ADMIN_USER=root
+SAMBA_ADMIN_USER=Administrator
 SAMBA_ADMIN_PASSWORD=Q@f0rc@3$TEJAc0mVC
 SAMBA_DOMAIN=AMAN.EB.MIL.BR
 
