`Update .env file with new Samba configuration settings`

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # Configurações do Samba
 SAMBA_HOST=10.5.24.27
-SAMBA_ADMIN_USER=Administrator
-SAMBA_ADMIN_PASSWORD=Q@f0rc@3$TEJAc0mVC
+SAMBA_SSH_USER=root
+SAMBA_SSH_PASSWORD=@f0rc@3$TEJAc0mVC
+SAMBA_ADMIN_USER=administrator
+SAMBA_ADMIN_PASSWORD=6U1A3lider@
 SAMBA_DOMAIN=AMAN.EB.MIL.BR
 
 # Configurações do Banco de Dados
